--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Calcula Negócio PRO</title>
 
     <!-- Manifest local -->
-    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="manifest" href="/manifest.json" />
 
     <!-- Ícones -->
     <link
